--- a/Employee_retention.ipynb
+++ b/Employee_retention.ipynb
@@ -2914,7 +2914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2949,6 +2949,7 @@
        "      <th>high</th>\n",
        "      <th>low</th>\n",
        "      <th>medium</th>\n",
+       "      <th>department_numeric</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2965,6 +2966,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2979,6 +2981,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2993,6 +2996,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -3007,6 +3011,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -3020,6 +3025,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3041,15 +3047,15 @@
        "3                   5              0     1                      0     0    1   \n",
        "4                   3              0     1                      0     0    1   \n",
        "\n",
-       "   medium  \n",
-       "0       0  \n",
-       "1       1  \n",
-       "2       1  \n",
-       "3       0  \n",
-       "4       0  "
+       "   medium  department_numeric  \n",
+       "0       0                   0  \n",
+       "1       1                   0  \n",
+       "2       1                   0  \n",
+       "3       0                   0  \n",
+       "4       0                   0  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3069,7 +3075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -3085,10 +3091,11 @@
        " 'promotion_last_5years',\n",
        " 'high',\n",
        " 'low',\n",
-       " 'medium']"
+       " 'medium',\n",
+       " 'department_numeric']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3100,7 +3107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -3116,10 +3123,11 @@
        " 'high',\n",
        " 'low',\n",
        " 'medium',\n",
+       " 'department_numeric',\n",
        " 'left']"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3132,7 +3140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -3166,6 +3174,7 @@
        "      <th>high</th>\n",
        "      <th>low</th>\n",
        "      <th>medium</th>\n",
+       "      <th>department_numeric</th>\n",
        "      <th>left</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -3182,6 +3191,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3196,6 +3206,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3210,6 +3221,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3224,6 +3236,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3237,6 +3250,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -3259,15 +3273,15 @@
        "3                   5              0                      0     0    1   \n",
        "4                   3              0                      0     0    1   \n",
        "\n",
-       "   medium  left  \n",
-       "0       0     1  \n",
-       "1       1     1  \n",
-       "2       1     1  \n",
-       "3       0     1  \n",
-       "4       0     1  "
+       "   medium  department_numeric  left  \n",
+       "0       0                   0     1  \n",
+       "1       1                   0     1  \n",
+       "2       1                   0     1  \n",
+       "3       0                   0     1  \n",
+       "4       0                   0     1  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3280,7 +3294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -3289,7 +3303,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 11991 entries, 0 to 11999\n",
-      "Data columns (total 11 columns):\n",
+      "Data columns (total 12 columns):\n",
       "satisfaction_level       11991 non-null float64\n",
       "last_evaluation          11991 non-null float64\n",
       "number_project           11991 non-null int64\n",
@@ -3300,9 +3314,10 @@
       "high                     11991 non-null uint8\n",
       "low                      11991 non-null uint8\n",
       "medium                   11991 non-null uint8\n",
+      "department_numeric       11991 non-null int64\n",
       "left                     11991 non-null int64\n",
-      "dtypes: float64(2), int64(6), uint8(3)\n",
-      "memory usage: 1.2 MB\n"
+      "dtypes: float64(2), int64(7), uint8(3)\n",
+      "memory usage: 1.3 MB\n"
      ]
     }
    ],
@@ -3327,16 +3342,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(11991, 11)"
+       "(11991, 12)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3347,7 +3362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -3355,11 +3370,12 @@
       "text/plain": [
        "Index(['satisfaction_level', 'last_evaluation', 'number_project',\n",
        "       'average_montly_hours', 'time_spend_company', 'Work_accident',\n",
-       "       'promotion_last_5years', 'high', 'low', 'medium', 'left'],\n",
+       "       'promotion_last_5years', 'high', 'low', 'medium', 'department_numeric',\n",
+       "       'left'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3370,24 +3386,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "\"['department_numeric'] not in index\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-86-3655676e7e4a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m x=hr_data[['satisfaction_level', 'last_evaluation', 'number_project',\n\u001b[1;32m      2\u001b[0m        \u001b[0;34m'average_montly_hours'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'time_spend_company'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Work_accident'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m        'promotion_last_5years', 'high', 'low', 'medium', 'department_numeric']] #X will be the features\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhr_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'left'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#left column will be the target one (1=left, 0 =stay)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2131\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2132\u001b[0m             \u001b[0;31m# either boolean or fancy integer index\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2133\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2134\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2135\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_frame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m_getitem_array\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2175\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_take\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2176\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2177\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_convert_to_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2178\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_take\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2179\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_convert_to_indexer\u001b[0;34m(self, obj, axis, is_setter)\u001b[0m\n\u001b[1;32m   1267\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1268\u001b[0m                     raise KeyError('{mask} not in index'\n\u001b[0;32m-> 1269\u001b[0;31m                                    .format(mask=objarr[mask]))\n\u001b[0m\u001b[1;32m   1270\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1271\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0m_values_from_object\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: \"['department_numeric'] not in index\""
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x=hr_data[['satisfaction_level', 'last_evaluation', 'number_project',\n",
     "       'average_montly_hours', 'time_spend_company', 'Work_accident',\n",
@@ -3397,21 +3398,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'y' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-87-e3eb07e8a914>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Split the dataset into two parts: train and test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.33\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m42\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'y' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Split the dataset into two parts: train and test\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -3420,9 +3409,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66.99% in training set\n",
+      "33.01% in test set\n"
+     ]
+    }
+   ],
    "source": [
     "#checking we have the desired 70% train, 30% split of the data\n",
     "print(\"{0:0.2f}% in training set\".format((len(x_train)/len(hr_data.index)) * 100))\n",
@@ -3431,7 +3429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3458,7 +3456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3468,7 +3466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -3479,7 +3477,7 @@
        "           weights='uniform')"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3490,7 +3488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3499,7 +3497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -3508,7 +3506,7 @@
        "0.9295098534613441"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3519,7 +3517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3528,7 +3526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -3537,7 +3535,7 @@
        "{'n_neighbors': 4}"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3578,6 +3576,13 @@
    "source": [
     "cross_val_score(KNeighborsClassifier(n_neighbors=4),x,y).mean()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
