data description added

--- a/Employee_retention.ipynb
+++ b/Employee_retention.ipynb
@@ -47,6 +47,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For HR analysis it will use a popular dataset called: \"HR_comma_sep.csv\". From now on : \"HR_data_origin.csv\". "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -187,6 +194,33 @@
    "source": [
     "hr=pd.read_csv(\"data/HR_data_origin.csv\")\n",
     "hr.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Brief description of columns in DataSet:\n",
+    "\n",
+    "- **Satisfaction_level** : Level of employee satisfaction with their work and position. At first, it ties closely with employee turnover. \n",
+    "\n",
+    "- **Last_evaluation**: Column can be used to evaluate the performance of an employee. The data ranges from 0–1, 0 being low performance and 1 being the highest.\n",
+    "\n",
+    "- **Number_projects**: number of projects employees done.\n",
+    "\n",
+    "- **average_montly_hours**: average monthly hours per employee.\n",
+    "\n",
+    "- **time_spend_company**: The data ranges from 1 to 10. Data unit not specified. It will be supposed _years_.\n",
+    "\n",
+    "- **Work_accident**: Whether the employee had a workplace accident,: 1 yes, 0 no.\n",
+    "\n",
+    "- **left**: Whether the employee has left or not the company: 1 yes, 0 no.\n",
+    "\n",
+    "- **promotion_last_5years**: Whether the employee has had a promotion in the last 5 years.\n",
+    "\n",
+    "- **Sales**: It seems to indicate the different areas or departments the employees belong: Sales, Technical, Support, IT, Product Managment, Marketing ,Accounting, Human Resources, Managment and Others.\n",
+    "\n",
+    "- **Salary**: Salary level classified by Low, Medium, High."
    ]
   },
   {
