--- a/0.DataScrubbing.ipynb
+++ b/0.DataScrubbing.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -559,7 +559,7 @@
        "Name: left, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -582,7 +582,7 @@
        "23.80825388359224"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -624,7 +624,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -654,7 +654,7 @@
        "3008"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "(11991, 10)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -848,7 +848,7 @@
        "max                 1.000000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -880,7 +880,7 @@
        "Name: left, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
        "16.604119756484028"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -923,7 +923,7 @@
        "16.6"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
        "1                  0.004018  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -1124,7 +1124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.title()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1139,6 +1148,8 @@
     }
    ],
    "source": [
+    "#Graph 2: Employee weigh by department\n",
+    "\n",
     "x=hr_no_dupl.groupby('department')['left'].count().sort_values(ascending=False).index\n",
     "z1= people_who_leave.groupby('department')['left'].count().sort_values(ascending=False).values\n",
     "z2= people_who_stay.groupby('department')['left'].count().sort_values(ascending=False).values\n",
@@ -1172,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1280,7 @@
        "9    technical   390"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1391,7 @@
        "9    technical  2244"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1512,7 +1523,7 @@
        "9      9    technical                2244                  390"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -1557,7 +1568,6 @@
        "      <th>department</th>\n",
        "      <th>left_totalEmployee</th>\n",
        "      <th>left_peopleWhoLeave</th>\n",
-       "      <th>turn_over</th>\n",
        "      <th>turn_over_ratio</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1569,7 +1579,6 @@
        "      <td>601</td>\n",
        "      <td>113</td>\n",
        "      <td>18.8</td>\n",
-       "      <td>18.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1577,7 +1586,6 @@
        "      <td>accounting</td>\n",
        "      <td>621</td>\n",
        "      <td>109</td>\n",
-       "      <td>17.6</td>\n",
        "      <td>17.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1587,7 +1595,6 @@
        "      <td>2244</td>\n",
        "      <td>390</td>\n",
        "      <td>17.4</td>\n",
-       "      <td>17.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1595,7 +1602,6 @@
        "      <td>support</td>\n",
        "      <td>1821</td>\n",
        "      <td>312</td>\n",
-       "      <td>17.1</td>\n",
        "      <td>17.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1605,7 +1611,6 @@
        "      <td>3239</td>\n",
        "      <td>550</td>\n",
        "      <td>17.0</td>\n",
-       "      <td>17.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1613,7 +1618,6 @@
        "      <td>marketing</td>\n",
        "      <td>673</td>\n",
        "      <td>112</td>\n",
-       "      <td>16.6</td>\n",
        "      <td>16.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1623,7 +1627,6 @@
        "      <td>976</td>\n",
        "      <td>158</td>\n",
        "      <td>16.2</td>\n",
-       "      <td>16.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1631,7 +1634,6 @@
        "      <td>product_mng</td>\n",
        "      <td>686</td>\n",
        "      <td>110</td>\n",
-       "      <td>16.0</td>\n",
        "      <td>16.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1641,7 +1643,6 @@
        "      <td>694</td>\n",
        "      <td>85</td>\n",
        "      <td>12.2</td>\n",
-       "      <td>12.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1650,24 +1651,23 @@
        "      <td>436</td>\n",
        "      <td>52</td>\n",
        "      <td>11.9</td>\n",
-       "      <td>11.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   index   department  left_totalEmployee  left_peopleWhoLeave  turn_over  \\\n",
-       "3      3           hr                 601                  113       18.8   \n",
-       "2      2   accounting                 621                  109       17.6   \n",
-       "9      9    technical                2244                  390       17.4   \n",
-       "8      8      support                1821                  312       17.1   \n",
-       "7      7        sales                3239                  550       17.0   \n",
-       "5      5    marketing                 673                  112       16.6   \n",
-       "0      0           IT                 976                  158       16.2   \n",
-       "6      6  product_mng                 686                  110       16.0   \n",
-       "1      1        RandD                 694                   85       12.2   \n",
-       "4      4   management                 436                   52       11.9   \n",
+       "   index   department  left_totalEmployee  left_peopleWhoLeave  \\\n",
+       "3      3           hr                 601                  113   \n",
+       "2      2   accounting                 621                  109   \n",
+       "9      9    technical                2244                  390   \n",
+       "8      8      support                1821                  312   \n",
+       "7      7        sales                3239                  550   \n",
+       "5      5    marketing                 673                  112   \n",
+       "0      0           IT                 976                  158   \n",
+       "6      6  product_mng                 686                  110   \n",
+       "1      1        RandD                 694                   85   \n",
+       "4      4   management                 436                   52   \n",
        "\n",
        "   turn_over_ratio  \n",
        "3             18.8  \n",
@@ -1682,7 +1682,7 @@
        "4             11.9  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1714,7 @@
     "#this graph shows turnover ratio per department vs. Company ratio (16.6%)\n",
     "\n",
     "plt.figure(figsize=(10,7))\n",
-    "plt.barh(headcount_sorted['department'],headcount_sorted['turn_over'],color='blue',alpha=0.4)\n",
+    "plt.barh(headcount_sorted['department'],headcount_sorted['turn_over_ratio'],color='blue',alpha=0.4)\n",
     "plt.barh(headcount_sorted['department'],turnover_ratio,alpha=.3,color='green', label='company turnover ratio')\n",
     "plt.xlabel('turn over ratio')\n",
     "plt.ylabel('department')\n",
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1741,7 +1741,7 @@
        "1850"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1753,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1850,7 +1850,7 @@
        "4   management             72"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1863,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1875,7 @@
        "Name: work_accident, dtype: int64"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1888,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1985,7 @@
        "5    marketing           3.81"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -2086,7 +2086,7 @@
        "1                           0.025946  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2104,7 +2104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2117,7 +2117,7 @@
        "Name: left, dtype: float64"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2130,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2143,7 +2143,7 @@
        "Name: left, dtype: float64"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2155,7 +2155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -2202,7 +2202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -2250,7 +2250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 38,
    "metadata": {
     "scrolled": false
    },
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -2308,7 +2308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
