--- a/0.DataScrubbing.ipynb
+++ b/0.DataScrubbing.ipynb
@@ -23,33 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 154,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RendererRegistry.enable('notebook')"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('ggplot')\n",
     "%matplotlib inline\n",
-    "import seaborn as sns\n",
-    "\n",
-    "import altair as alt\n",
-    "from vega_datasets import data\n",
-    "\n",
-    "# for the notebook only (not for JupyterLab) run this command once per session\n",
-    "alt.renderers.enable('notebook')"
+    "import seaborn as sns"
    ]
   },
   {
