some typos were eliminated

--- a/0.DataScrubbing.ipynb
+++ b/0.DataScrubbing.ipynb
@@ -9,7 +9,7 @@
     "![peces](http://4.bp.blogspot.com/-7_FVudvkdV4/Tt3pP5uQ_qI/AAAAAAAAAek/yIBC0K4DGSk/s1600/peces_nadando_en_el_agua_de_las_peceras.jpg)\n",
     "\n",
     "\n",
-    "### This dataset is related to the record of the employees in the company.\n",
+    "### This dataset is related to the record of the employees in a company.\n",
     "\n",
     "* It describes the **satisfaction level** of the employee, **last evaluation** of their performance, **number of projects** they done, their **average monthly working hours**, the **number of years** spent in the company, whether the employee had a **workplace accident**, whether the employee **left the workspace** , their **last promotion**, the **department** where the employee works and the **salary level**."
    ]
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For HR analysis it will use a popular dataset called: \"HR_comma_sep.csv\". From now on : \"HR_data_origin.csv\". "
+    "For this analysis it will be used a popular dataset called: \"HR_comma_sep.csv\". From now on : \"HR_data_origin.csv\". "
    ]
   },
   {
@@ -614,7 +614,7 @@
     }
    ],
    "source": [
-    "#I have valorated the size of these elements and I feel confortable removing duplicates from the data set\n",
+    "#After valorating the size of these elements I feel confortable removing duplicates from the data set\n",
     "hr_no_dupl= hr_renamed.drop_duplicates()\n",
     "hr_no_dupl.shape"
    ]
