--- a/0.DataScrubbing.ipynb
+++ b/0.DataScrubbing.ipynb
@@ -1708,7 +1708,8 @@
    "source": [
     "Curiosities: \n",
     "* employees working more than 6 years didn't leave. \n",
-    "* ten years is the maximum time s\n",
+    "* ten years is the maximum value so it could indicate it is a young company\n",
+    "\n",
     "The level of satisfaction begins to decrease in the third year and worsens to 4.5 years, probably due to the fact that promotions are scarce."
    ]
   },
