--- a/0.DataScrubbing.ipynb
+++ b/0.DataScrubbing.ipynb
@@ -1009,7 +1009,7 @@
     "So, I can determine that 17% of the employees left the company. Is it high, is it low, is it bad, is it good...?\n",
     "Well, the ideal labour turnover will depend on the business and the industry the company work in. \n",
     "\n",
-    "I have no enough information about the company and it seems not easy to discover it.  However what I can and try to find out and analyse is : __What are people leave the company like and why they do it?__ "
+    "I have no enough information about the company and it seems not easy to discover it.  However what I can and try to find out and analyse is : __What are people leaving the company like and why they do it?__ "
    ]
   },
   {
@@ -1112,7 +1112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Obviously, the lower the salary, the greater the turnover"
+    "Obviously the lower the salary, the greater the turnover"
    ]
   },
   {
@@ -1416,7 +1416,7 @@
     "As we can see in the graph although HR has the highest turnover rate, when I split it by salary the picture changes. \n",
     "\n",
     "* __High and medium__: the peack keeps being HR \n",
-    "* __Low__:  in the top three are areas like marketing, managment and support"
+    "* __Low__: marketing, managment and support areas have the highest turnover rate. It is a fact that \"salary\" is a key factor to leave the company"
    ]
   },
   {
